chore: api cleanup
[ci skip]